--- a/notebooks/ndvi_data_collection.ipynb
+++ b/notebooks/ndvi_data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,14 @@
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd\n",
     "from tqdm.notebook import tqdm\n",
+    "import rasterio\n",
     "from PIL import Image\n",
     "#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +81,13 @@
    "source": [
     "resolution = 10  # in meters\n",
     "# iterate over the cities\n",
+    "os.makedirs(\"../datasets/ndvi_geotiff\", exist_ok=True)\n",
+    "\n",
     "for i, row in tqdm(city_gdf.iterrows(), total=city_gdf.shape[0]):\n",
     "    aoi_coords_wgs84 = row[\"geometry\"].bounds\n",
     "    aoi_bbox = sentinelhub.BBox(\n",
     "        bbox=aoi_coords_wgs84, crs=sentinelhub.CRS.WGS84)\n",
+    "\n",
     "    aoi_size = sentinelhub.bbox_to_dimensions(aoi_bbox, resolution=resolution)\n",
     "\n",
     "    request_ndvi = sentinelhub.SentinelHubRequest(\n",
@@ -102,13 +106,30 @@
     "        config=config,\n",
     "        data_folder=\"./data\",\n",
     "    )\n",
-    "    response = request_ndvi.get_data(save_data=False)\n",
+    "    response = request_ndvi.get_data(save_data=True)\n",
     "    ndvi_img = response[\n",
     "        0]\n",
-    "    ndvi_pil_img = Image.fromarray(ndvi_img)\n",
-    "    os.makedirs(\"../datasets/ndvi_images\", exist_ok=True)\n",
-    "    ndvi_img_path = f\"../datasets/ndvi_images/{row[\"code_insee\"]}.tiff\"\n",
-    "    ndvi_pil_img.save(ndvi_img_path)"
+    "    # Construct the file path for the GeoTIFF\n",
+    "\n",
+    "    ndvi_img_path = f\"../datasets/ndvi_geotiff/{row[\"code_insee\"]}.tiff\"\n",
+    "    transform = rasterio.transform.from_bounds(\n",
+    "        *aoi_coords_wgs84, *aoi_size\n",
+    "    )\n",
+    "    crs = rasterio.crs.CRS.from_epsg(4326)\n",
+    "\n",
+    "    # Save the NDVI image as a GeoTIFF with geospatial metadata\n",
+    "    with rasterio.open(\n",
+    "        ndvi_img_path,\n",
+    "        'w',\n",
+    "        driver='GTiff',\n",
+    "        height=ndvi_img.shape[0],\n",
+    "        width=ndvi_img.shape[1],\n",
+    "        count=1,  # Number of bands\n",
+    "        dtype=ndvi_img.dtype,\n",
+    "        crs=crs,\n",
+    "        transform=transform,\n",
+    "    ) as dst:\n",
+    "        dst.write(ndvi_img, 1)  # Write the NDVI data to the first band"
    ]
   }
  ],
