CI + saved fixed data

--- a/notebooks/image_analysis.ipynb
+++ b/notebooks/image_analysis.ipynb
@@ -24,8 +24,7 @@
     "# Specify the path to the directory containing the images\n",
     "image_dir = \"../datasets/ndvi_geotiff\"\n",
     "\n",
-    "city_gdf = gpd.read_file(\n",
-    "    \"../datasets/villes_villages_fleuris.shp\").to_crs(epsg=4326)\n",
+    "city_gdf = gpd.read_file(\"../datasets/villes_villages_fleuris.shp\").to_crs(epsg=4326)\n",
     "city_gdf.drop(columns=[\"gml_id\"], inplace=True)"
    ]
   },
@@ -35,28 +34,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ndvi_gdf = city_gdf.copy()\n",
-    "ndvi_gdf['mean_ndvi'] = np.nan\n",
+    "ndvi_gdf[\"mean_ndvi\"] = np.nan\n",
     "\n",
     "for index, row in city_gdf.iterrows():\n",
     "    code_insee = row[\"code_insee\"]\n",
-    "    polygon = row['geometry']\n",
-    "    city_name = row[\"commune\"].encode('latin-1').decode('utf-8')\n",
+    "    polygon = row[\"geometry\"]\n",
+    "    city_name = row[\"commune\"].encode(\"latin-1\").decode(\"utf-8\")\n",
     "\n",
     "    image_path = f\"../datasets/ndvi_geotiff/{code_insee}.tiff\"\n",
     "\n",
     "    with rasterio.open(image_path) as dataset:\n",
-    "\n",
     "        dataset_array = dataset.read(1)\n",
     "        mask = rasterio.features.geometry_mask(\n",
-    "            [polygon], out_shape=dataset_array.shape, transform=dataset.transform, invert=False)\n",
+    "            [polygon], out_shape=dataset_array.shape, transform=dataset.transform, invert=False\n",
+    "        )\n",
     "        masked_array = np.ma.masked_array(dataset_array, mask)\n",
     "        # show_city_nvdi(masked_array, city_name)\n",
     "\n",
     "    # nanmean is used to ignore the nan values\n",
     "    mean_value = np.nanmean(masked_array)\n",
-    "    ndvi_gdf.loc[index, 'mean_ndvi'] = mean_value"
+    "    ndvi_gdf.loc[index, \"mean_ndvi\"] = mean_value"
    ]
   },
   {
@@ -73,18 +71,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# get row where fleurs = 1\n",
-    "plt.boxplot([ndvi_gdf[ndvi_gdf[\"fleurs\"] == i]\n",
-    "            [\"mean_ndvi\"].values for i in range(1, 5)])\n",
+    "plt.boxplot([ndvi_gdf[ndvi_gdf[\"fleurs\"] == i][\"mean_ndvi\"].values for i in range(1, 5)])\n",
     "plt.xlabel(\"Number of Flowers\")\n",
     "plt.ylabel(\"Mean NDVI\")\n",
     "plt.title(\"Boxplot of Mean NDVI\")\n",
@@ -101,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "correlation = ndvi_gdf['fleurs'].corr(ndvi_gdf['mean_ndvi'])\n",
+    "correlation = ndvi_gdf[\"fleurs\"].corr(ndvi_gdf[\"mean_ndvi\"])\n",
     "correlation"
    ]
   },
